--- a/index.html
+++ b/index.html
@@ -9,35 +9,7 @@
 <body>
     <header></header>
     <main>
-        <ul>
-            <li>
-                <h2>bulbasaur</h2>
-                <img src="http://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png">
-                <p>
-                    HP: 451
-                    A: 491
-                    D: 491
-                </p>
-            </li>
-            <li>
-                <h2>ivysaur</h2>
-                <img src="http://assets.pokemon.com/assets/cms2/img/pokedex/full/002.png">
-                <p>    
-                    HP: 60
-                    A: 62
-                    D: 63
-                </p>
-            </li>
-            <li>
-                <h2>venusaur</h2>
-                <img src="http://assets.pokemon.com/assets/cms2/img/pokedex/full/003.png">
-                <p>
-                    HP: 80
-                    A: 82
-                    D: 83
-                </p>
-            </li>
-        </ul>
+        <ul id="pokelist"></ul>
     </main>
     <footer></footer>
     <script type="module" src="./src/index.js"></script>
