Setup paging component

--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
     <title>Pokedex</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Pokedex</h1>
+    </header>
     <main>
+        <p>
+            <button id="previous-button">&lt; Previous</button>
+            <span>
+                Page <span id="current-page">1</span>
+                of <span id="total-pages"></span>
+            </span>
+                <button id="next-button">Next &gt;</button>
+        </p>
         <ul id="pokelist"></ul>
     </main>
     <footer></footer>
